fix: fix popover menu

--- a/baohiemanphattrondoi.html
+++ b/baohiemanphattrondoi.html
@@ -273,5 +273,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
