--- a/baohiemantamhocvan.html
+++ b/baohiemantamhocvan.html
@@ -94,12 +94,6 @@
           <span>/</span>
           <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
             href="https://zalo.me/84931909697">0931.909.697</a>
-          <span>/</span>
-          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
-            href="tel:+84905499496">0905.499.496</a>
-          <span>/</span>
-          <a style="font-size: 14px; margin: 0; cursor: pointer; width:fit-content;"
-            href="https://zalo.me/84931909697">0931.909.697</a>
         </div>
       </div>
     </div>
@@ -300,5 +294,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
