--- a/baohiemoto.html
+++ b/baohiemoto.html
@@ -263,5 +263,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
