--- a/bao-viet-nhan-tho-ra-mat-sieu-pham-bao-ve-len-toi-1-trieu-do-la-my.html
+++ b/bao-viet-nhan-tho-ra-mat-sieu-pham-bao-ve-len-toi-1-trieu-do-la-my.html
@@ -258,5 +258,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
