--- a/baohiemankhanghanhphuc.html
+++ b/baohiemankhanghanhphuc.html
@@ -341,5 +341,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
