--- a/baohiemankhangnhuy.html
+++ b/baohiemankhangnhuy.html
@@ -268,5 +268,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
