--- a/baohiemantamhoachdinh.html
+++ b/baohiemantamhoachdinh.html
@@ -285,5 +285,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
