--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -280,5 +280,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
