--- a/baohiemruirotaisan.html
+++ b/baohiemruirotaisan.html
@@ -279,5 +279,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
