--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -564,5 +564,6 @@
     document.getElementById("menu").classList.toggle("active");
   }
 </script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
