--- a/index.html
+++ b/index.html
@@ -355,5 +355,6 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
 <script src="scripts/mail.js"></script>
+<script src="scripts/onshow-tap.js"></script>
 
 </html>
