--- a/index.html
+++ b/index.html
@@ -356,5 +356,6 @@
 </script>
 <script src="scripts/mail.js"></script>
 <script src="scripts/onshow-tap.js"></script>
+<script src="scripts/notification.js"></script>
 
 </html>
