--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
           </p>
           <ul>
             <li>
-              <a href="tel:+84905499496"> 0905.499.496 (Mrs. Hương)</a>
+              <a style="font-weight: 600;" href="tel:+84905499496"> 0905.499.496 (Mrs. Hương)</a>
             </li>
             <li>
-              <a tyle="font-size: 14px; margin: 0; cursor: pointer;" href="https://zalo.me/84931909697">0931.909.697</a>
+              <a style="margin: 0; cursor: pointer; font-weight: 600;"
+                href="https://zalo.me/84931909697">0931.909.697</a>
             </li>
           </ul>
         </div>
@@ -129,17 +130,18 @@
           <p class="consultant-title">
             Liên hệ qua Zalo
           </p>
-          <a href="tel:+84905499496">
-            Mrs.Hương's Zalo
+          <a style="font-weight: 600;" href="https://zalo.me/84931909697">
+            Mrs. Thắng Nguyễn's Zalo
           </a>
         </div>
         <div class="consultant-part">
           <p class="consultant-title">
             Theo dõi thêm tin tức tại
           </p>
-          <p style="margin:0;">
-            facebook.com
-          </p>
+          <a href="https://www.facebook.com/people/T%C6%B0-V%E1%BA%A5n-B%E1%BA%A3o-Hi%E1%BB%83m-Mi%E1%BB%85n-Ph%C3%AD/61573129183045/"
+            style="margin:0; font-weight: 600;">
+            Tư Vấn Bảo Hiểm Miễn Phí
+          </a>
         </div>
       </div>
       <img onclick="window.location.href='/index.html'" class="logo"
