--- a/tuyen-dung.html
+++ b/tuyen-dung.html
@@ -74,7 +74,7 @@
     <div class="breadcrumb" style="margin-top: 100px;">
       <a href="#">TRANG CHỦ</a> • <a href="#">TUYỂN DỤNG</a>
     </div>
-    <h1 class="title-new">Tuyển dụng tư vấn viên Bảo Việt Nhân Thọ Đà Nẵng 2024</h1>
+    <h1 class="title-new">Tuyển dụng Nhân viên Kinh doanh Bảo Hiểm</h1>
     <div class="meta-info" style=" border-bottom: 1px solid rgba(0, 0, 0, 0.219); padding-bottom: 20px;">
       <span class="category">Hoạt động tập đoàn</span>
       <span class="date">06.01.2025</span>
@@ -99,8 +99,8 @@
         </p>
         <h2>Vị Trí Ứng Tuyển</h2>
         <ul>
-          <li>02 Nhân viên quản lý full time</li>
-          <li>20 Tư vấn viên tài chính partime hoặc fulltime</li>
+          <li>02 leader</li>
+          <li>05 sales</li>
         </ul>
         <h2><span style="font-size: 100%;">Lý do bạn nên chọn làm tư vấn viên Bảo Việt Nhân Thọ </span></h2>
         <p>Là doanh nghiệp bảo hiểm Việt duy nhất và lâu đời nhất hoạt động trong lĩnh vực bảo hiểm nhân thọ tại Việt
