fix: preview code

--- a/baohiemantamhocvan.html
+++ b/baohiemantamhocvan.html
@@ -6,6 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An Tâm Học Vấn</title>
   <link rel="stylesheet" href="/style.css" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/baohiemantamhocvan.html" />
+  <meta property="og:title" content="An Tâm Học Vấn - Bảo Việt Đà Nẵng" />
+  <meta property="og:description"
+    content="Chúng tôi hiểu rằng việc đầu tư vào học vấn cho con cái là một trong những quyết định quan trọng nhất của các bậc phụ huynh." />
+  <meta property="og:image"
+    content="https://baovietnhantho.com.vn/storage/8df372b6-a019-4e6c-8e46-d86636e23ef8/an-tam-hoc-van-cover.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://baohiembaovietdanang.vn/baohiemantamhocvan.html" />
+  <meta property="twitter:title" content="An Tâm Học Vấn - Bảo Việt Đà Nẵng" />
+  <meta property="twitter:description"
+    content="Chúng tôi hiểu rằng việc đầu tư vào học vấn cho con cái là một trong những quyết định quan trọng nhất của các bậc phụ huynh." />
+  <meta property="twitter:image"
+    content="https://baovietnhantho.com.vn/storage/8df372b6-a019-4e6c-8e46-d86636e23ef8/an-tam-hoc-van-cover.jpg" />
 </head>
 
 <body>
