--- a/baohiemanvuisongkhoe.html
+++ b/baohiemanvuisongkhoe.html
@@ -6,6 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An vui sống khoẻ</title>
   <link rel="stylesheet" href="/style.css" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/baohiemanvuisongkhoe.html" />
+  <meta property="og:title" content="An Vui Sống Khỏe - Bảo Việt Đà Nẵng" />
+  <meta property="og:description"
+    content="Chăm sóc sức khỏe chu toàn cho người tham gia cả trước, trong và sau điều trị. An Vui Sống Khỏe là tài sản cần có của mỗi gia đình." />
+  <meta property="og:image"
+    content="https://www.baovietnhantho.com.vn/storage/95d46c5e-778e-40aa-80a4-3b0382d6d58d/WebBVNT-01.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://baohiembaovietdanang.vn/baohiemanvuisongkhoe.html" />
+  <meta property="twitter:title" content="An Vui Sống Khỏe - Bảo Việt Đà Nẵng" />
+  <meta property="twitter:description"
+    content="Chăm sóc sức khỏe chu toàn cho người tham gia cả trước, trong và sau điều trị. An Vui Sống Khỏe là tài sản cần có của mỗi gia đình." />
+  <meta property="twitter:image"
+    content="https://www.baovietnhantho.com.vn/storage/95d46c5e-778e-40aa-80a4-3b0382d6d58d/WebBVNT-01.jpg" />
 </head>
 
 <body>
