--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -2,10 +2,30 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bảo hiểm oto, xe máy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bảo hiểm ô tô, xe máy</title>
   <link rel="stylesheet" href="/style.css" />
+
+  <!-- SEO Meta -->
+  <meta name="description"
+    content="Mua bảo hiểm ô tô, xe máy chính hãng Bảo Việt Đà Nẵng. An tâm mỗi hành trình, vững vàng tương lai." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/" />
+  <meta property="og:title" content="Bảo hiểm ô tô, xe máy - Bảo Việt Đà Nẵng" />
+  <meta property="og:description"
+    content="Mua bảo hiểm ô tô, xe máy chính hãng Bảo Việt Đà Nẵng. An tâm mỗi hành trình, vững vàng tương lai." />
+  <meta property="og:image" content="https://baohiembaovietdanang.vn/images/preview.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://baohiembaovietdanang.vn/" />
+  <meta property="twitter:title" content="Bảo hiểm ô tô, xe máy - Bảo Việt Đà Nẵng" />
+  <meta property="twitter:description"
+    content="Mua bảo hiểm ô tô, xe máy chính hãng Bảo Việt Đà Nẵng. An tâm mỗi hành trình, vững vàng tương lai." />
+  <meta property="twitter:image" content="https://baohiembaovietdanang.vn/images/preview.jpg" />
 </head>
 
 <body>
