--- a/baohiemxemay.html
+++ b/baohiemxemay.html
@@ -4,6 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Bảo hiểm xe máy - Bảo Việt Đà Nẵng">
+  <meta property="og:description"
+    content="Bảo hiểm xe máy giúp bạn an tâm khi tham gia giao thông, bao gồm bảo hiểm bắt buộc và bảo hiểm tai nạn cho người ngồi trên xe. Tìm hiểu ngay!">
+  <meta property="og:image" content="https://baovietonline.com.vn/uploads/product/019310e7808afe2f3b13e982a08239e7.jpg">
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/baohiemxemay.html">
+  <meta property="og:type" content="article">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Bảo hiểm xe máy - Bảo Việt Đà Nẵng">
+  <meta name="twitter:description"
+    content="Bảo hiểm xe máy giúp bạn an tâm khi tham gia giao thông, bao gồm bảo hiểm bắt buộc và bảo hiểm tai nạn cho người ngồi trên xe. Tìm hiểu ngay!">
+  <meta name="twitter:image"
+    content="https://baovietonline.com.vn/uploads/product/019310e7808afe2f3b13e982a08239e7.jpg">
   <title>Bảo hiểm xe máy</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
