--- a/baoviet-group-bvh-only-insurance-company-vietnam-first-time-been-ranked-fortune-southeast-asia-500.html
+++ b/baoviet-group-bvh-only-insurance-company-vietnam-first-time-been-ranked-fortune-southeast-asia-500.html
@@ -7,6 +7,20 @@
   <title>Bảo Việt Nhân Thọ Đà Nẵng</title>
   <link rel="shortcut icon" href="https://baovietonline.com.vn/favicon.ico">
   <link rel="stylesheet" href="/style.css" />
+  <meta property="og:title" content="Bảo Việt Đà Nẵng được vinh danh trong Fortune Đông Nam Á 500">
+  <meta property="og:description"
+    content="Tập đoàn Bảo Việt là doanh nghiệp bảo hiểm duy nhất tại Việt Nam được xếp hạng trong Fortune Southeast Asia 500. Tìm hiểu chi tiết!">
+  <meta property="og:image"
+    content="https://www.baoviet.com.vn/sites/default/files/2024-06/448565785_841190724570335_6055597788066863283_n.png">
+  <meta property="og:url"
+    content="https://baohiembaovietdanang.vn/baoviet-group-bvh-only-insurance-company-vietnam-first-time-been-ranked-fortune-southeast-asia-500.html">
+  <meta property="og:type" content="article">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Bảo Việt Đà Nẵng được vinh danh trong Fortune Đông Nam Á 500">
+  <meta name="twitter:description"
+    content="Tập đoàn Bảo Việt là doanh nghiệp bảo hiểm duy nhất tại Việt Nam được xếp hạng trong Fortune Southeast Asia 500. Tìm hiểu chi tiết!">
+  <meta name="twitter:image"
+    content="https://www.baoviet.com.vn/sites/default/files/2024-06/448565785_841190724570335_6055597788066863283_n.png">
 </head>
 
 <body>
