--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Bảo Việt Đà Nẵng - Tư vấn bảo hiểm miễn phí">
+  <meta property="og:description"
+    content="Tìm hiểu các gói bảo hiểm nhân thọ và phi nhân thọ tại Bảo Việt Đà Nẵng. Đăng ký tư vấn miễn phí ngay hôm nay!">
+  <meta property="og:image" content="https://baohiembaovietdanang.vn/assets/bao-60-nam-1-113944_87-121522.webp">
+  <meta property="og:url" content="https://baohiembaovietdanang.vn">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Bảo Việt Đà Nẵng - Tư vấn bảo hiểm miễn phí">
+  <meta name="twitter:description"
+    content="Tìm hiểu các gói bảo hiểm nhân thọ và phi nhân thọ tại Bảo Việt Đà Nẵng. Đăng ký tư vấn miễn phí ngay hôm nay!">
+  <meta name="twitter:image" content="assets/bao-60-nam-1-113944_87-121522.webp">
   <title>Bảo Việt Đà Nẵng</title>
-  <link rel="shortcut icon" href="https://baovietonline.com.vn/favicon.ico">
+  <link rel="shortcut icon" href="https://baohiembaovietdanang.vn/favicon.ico">
   <link rel="stylesheet" href="/style.css" />
 </head>
 
