--- a/baohiemintercare.html
+++ b/baohiemintercare.html
@@ -6,6 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bảo hiểm Intercare </title>
   <link rel="stylesheet" href="/style.css" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/baohiemintercare.html" />
+  <meta property="og:title" content="Bảo hiểm Intercare - Bảo Việt Đà Nẵng" />
+  <meta property="og:description"
+    content="Giúp kết nối khách hàng với hệ thống y tế cao cấp trong và ngoài nước, có Intercare, an tâm sức khỏe." />
+  <meta property="og:image"
+    content="https://baovietonline.com.vn/uploads/product/9d21949d2e2c734e19b8574b2dea4f34.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://baohiembaovietdanang.vn/baohiemintercare.html" />
+  <meta property="twitter:title" content="Bảo hiểm Intercare - Bảo Việt Đà Nẵng" />
+  <meta property="twitter:description"
+    content="Giúp kết nối khách hàng với hệ thống y tế cao cấp trong và ngoài nước, có Intercare, an tâm sức khỏe." />
+  <meta property="twitter:image"
+    content="https://baovietonline.com.vn/uploads/product/9d21949d2e2c734e19b8574b2dea4f34.jpg" />
 </head>
 
 <body>
