fix: updated pricing table

--- a/baohiemanphattrondoi.html
+++ b/baohiemanphattrondoi.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An Phát Trọn Đời</title>
+  <!-- Meta Image for Social Sharing -->
+  <meta property="og:image"
+    content="https://www.baovietnhantho.com.vn/storage/9e2f4b35-ff14-40d7-a1e6-6777a8eb9914/an-tam-hoach-dinh.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="An Phát Trọn Đời - Bảo hiểm tài chính vững chắc cho tương lai">
+  <meta property="og:description"
+    content="Giải pháp bảo vệ trọn đời & linh hoạt đầu tư tài chính từ Bảo Việt Nhân Thọ. Tư vấn miễn phí ngay hôm nay!">
   <link rel="stylesheet" href="/style.css" />
 </head>
 
