--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -19,7 +19,7 @@
     content="Bảo hiểm cháy nổ - bảo vệ tài sản, khách sạn, nhà cửa khỏi hỏa hoạn. Mua dễ dàng, nhận hợp đồng nhanh, tư vấn miễn phí." />
   <meta property="og:image"
     content="https://baovietonline.com.vn/uploads/product/3970c4a9f76a9a1ea2111f5970671736.jpg" />
-  <meta property="og:url" content="https://baohiembaovietdanang.vn/bao-hiem-chay-no.html" />
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/baohiemchayno.html" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card (optional) -->
