--- a/baohiemsuckhoe.html
+++ b/baohiemsuckhoe.html
@@ -566,205 +566,8 @@
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274); margin-bottom: 0;">
         Biểu phí bảo hiểm</p>
       <div style="max-width: 100%; overflow-x: scroll;">
-        <table style="width: 100%;">
-          <thead>
-            <tr>
-              <th>Nhóm Tuổi</th>
-              <th>Đồng (Bronze)</th>
-              <th>Bạc (Silver)</th>
-              <th>Vàng (Gold)</th>
-              <th>Bạch Kim (Platinum)</th>
-              <th>Kim Cương (Diamond)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="section-title">
-              <td colspan="6">A. Bảo hiểm Chính - Điều trị Nội trú cho Bệnh Tật & Tai Nạn</td>
-            </tr>
-            <tr>
-              <td>1 - 3 tuổi</td>
-              <td>2.585.000</td>
-              <td>3.707.000</td>
-              <td>5.616.000</td>
-              <td>7.582.000</td>
-              <td>9.267.000</td>
-            </tr>
-            <tr>
-              <td>4 - 6 tuổi</td>
-              <td>1.450.000</td>
-              <td>2.081.000</td>
-              <td>3.153.000</td>
-              <td>4.257.000</td>
-              <td>5.203.000</td>
-            </tr>
-            <tr>
-              <td>7 - 9 tuổi</td>
-              <td>1.320.000</td>
-              <td>1.900.000</td>
-              <td>2.867.000</td>
-              <td>3.870.000</td>
-              <td>4.730.000</td>
-            </tr>
-            <tr>
-              <td>10 - 18 tuổi</td>
-              <td>1.255.800</td>
-              <td>1.801.800</td>
-              <td>2.730.800</td>
-              <td>3.685.500</td>
-              <td>4.504.500</td>
-            </tr>
-            <tr>
-              <td>19 - 30 tuổi</td>
-              <td>1.196.000</td>
-              <td>1.700.000</td>
-              <td>2.579.000</td>
-              <td>3.482.000</td>
-              <td>4.250.000</td>
-            </tr>
-            <tr>
-              <td>31 - 40 tuổi</td>
-              <td>1.315.600</td>
-              <td>1.874.600</td>
-              <td>2.838.600</td>
-              <td>3.831.500</td>
-              <td>4.709.500</td>
-            </tr>
-            <tr>
-              <td>41 - 50 tuổi</td>
-              <td>1.375.400</td>
-              <td>1.973.400</td>
-              <td>2.990.000</td>
-              <td>4.036.500</td>
-              <td>4.933.500</td>
-            </tr>
-            <tr>
-              <td>51 - 60 tuổi</td>
-              <td>1.435.200</td>
-              <td>2.059.200</td>
-              <td>3.120.000</td>
-              <td>4.212.000</td>
-              <td>5.148.000</td>
-            </tr>
-            <tr>
-              <td>61 - 65 tuổi</td>
-              <td>1.554.800</td>
-              <td>2.230.800</td>
-              <td>3.380.000</td>
-              <td>4.563.000</td>
-              <td>5.577.000</td>
-            </tr>
-            <tr class="section-title">
-              <td colspan="6">B. Bảo hiểm Bổ sung</td>
-            </tr>
-            <tr>
-              <td>1 - 3 tuổi</td>
-              <td>3.370.000</td>
-              <td>3.370.000</td>
-              <td>3.370.000</td>
-              <td>5.516.000</td>
-              <td>8.424.000</td>
-            </tr>
-            <tr>
-              <td>4 - 6 tuổi</td>
-              <td>1.900.000</td>
-              <td>1.900.000</td>
-              <td>1.900.000</td>
-              <td>3.153.000</td>
-              <td>4.730.000</td>
-            </tr>
-            <tr>
-              <td>7 - 9 tuổi</td>
-              <td>1.720.000</td>
-              <td>1.720.000</td>
-              <td>1.720.000</td>
-              <td>2.867.000</td>
-              <td>4.300.000</td>
-            </tr>
-            <tr>
-              <td>10 - 18 tuổi</td>
-              <td>1.638.000</td>
-              <td>1.638.000</td>
-              <td>1.638.000</td>
-              <td>2.730.000</td>
-              <td>4.095.000</td>
-            </tr>
-            <tr>
-              <td>19 - 30 tuổi</td>
-              <td>1.560.000</td>
-              <td>1.560.000</td>
-              <td>1.560.000</td>
-              <td>2.600.000</td>
-              <td>3.900.000</td>
-            </tr>
-            <tr>
-              <td>31 - 40 tuổi</td>
-              <td>1.716.000</td>
-              <td>1.716.000</td>
-              <td>1.716.000</td>
-              <td>2.860.000</td>
-              <td>4.290.000</td>
-            </tr>
-            <tr>
-              <td>41 - 50 tuổi</td>
-              <td>1.794.000</td>
-              <td>1.794.000</td>
-              <td>1.794.000</td>
-              <td>2.990.000</td>
-              <td>4.485.000</td>
-            </tr>
-            <tr>
-              <td>51 - 60 tuổi</td>
-              <td>1.872.000</td>
-              <td>1.872.000</td>
-              <td>1.872.000</td>
-              <td>3.120.000</td>
-              <td>4.680.000</td>
-            </tr>
-            <tr>
-              <td>61 - 65 tuổi</td>
-              <td>2.028.000</td>
-              <td>2.028.000</td>
-              <td>2.028.000</td>
-              <td>3.380.000</td>
-              <td>5.070.000</td>
-            </tr>
-            <tr class="section-title">
-              <td colspan="6">Các Tùy chọn Bảo hiểm Khác</td>
-            </tr>
-            <tr>
-              <td>Bảo hiểm Tai nạn Cá nhân</td>
-              <td colspan="5">Tùy chọn</td>
-            </tr>
-            <tr>
-              <td>Bảo hiểm Nhân thọ</td>
-              <td colspan="5">Tùy chọn</td>
-            </tr>
-            <tr>
-              <td>Bảo hiểm Răng (1-18 tuổi)</td>
-              <td>600.000</td>
-              <td>600.000</td>
-              <td>1.500.000</td>
-              <td>2.600.000</td>
-              <td>3.900.000</td>
-            </tr>
-            <tr>
-              <td>Bảo hiểm Răng (19-65 tuổi)</td>
-              <td>490.000</td>
-              <td>490.000</td>
-              <td>1.200.000</td>
-              <td>2.000.000</td>
-              <td>3.000.000</td>
-            </tr>
-            <tr>
-              <td>Bảo hiểm Mang thai (18-65 tuổi)</td>
-              <td>Không có</td>
-              <td>Không có</td>
-              <td>Không có</td>
-              <td>4.800.000</td>
-              <td>5.500.000</td>
-            </tr>
-          </tbody>
-        </table>
+        <img src="assets/bang-gia-an-gia.png" alt="Bảng giá an gia"
+          style="width: 100%; max-width: 800px; margin: auto; display: block;" srcset="">
       </div>
     </div>
 
