fix: implemented favicon

--- a/baohiemanphatcattuong.html
+++ b/baohiemanphatcattuong.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An Phát Cát Tường</title>
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
   <meta name="description"
     content="Chọn bảo hiểm nhân thọ uy tín để đảm bảo tài chính cho gia đình và bảo vệ tương lai. Khám phá các gói bảo hiểm từ các công ty bảo hiểm đáng tin cậy.">
   <meta name="keywords"
