--- a/baohiemanphattrondoi.html
+++ b/baohiemanphattrondoi.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An Phát Trọn Đời</title>
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
   <!-- Meta Image for Social Sharing -->
   <meta property="og:image"
     content="https://www.baovietnhantho.com.vn/storage/9e2f4b35-ff14-40d7-a1e6-6777a8eb9914/an-tam-hoach-dinh.jpg">
