--- a/baohiemoto.html
+++ b/baohiemoto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">d
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bảo hiểm oto, xe máy</title>
+    <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
     <meta name="description"
       content="So sánh & mua bảo hiểm ô tô bắt buộc, vật chất xe giá rẻ, từ các nhà cung cấp uy tín. Hỗ trợ nhanh, thanh toán online, giao giấy tờ tận nơi.">
     <meta name="keywords"
