--- a/baohiemxemay.html
+++ b/baohiemxemay.html
@@ -17,6 +17,7 @@
   <meta name="twitter:image"
     content="https://baovietonline.com.vn/uploads/product/019310e7808afe2f3b13e982a08239e7.jpg">
   <title>Bảo hiểm xe máy</title>
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
   <link rel="stylesheet" href="/style.css" />
 </head>
 
