--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     content="Tìm hiểu các gói bảo hiểm nhân thọ và phi nhân thọ tại Bảo Việt Đà Nẵng. Đăng ký tư vấn miễn phí ngay hôm nay!">
   <meta name="twitter:image" content="assets/bao-60-nam-1-113944_87-121522.webp">
   <title>Bảo Việt Đà Nẵng</title>
-  <link rel="shortcut icon" href="https://baohiembaovietdanang.vn/favicon.ico">
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
+  <link rel="shortcut icon" href="https://baohiembaovietdanang.vn/assets/logo.ico">
   <link rel="stylesheet" href="/style.css" />
 </head>
 
