--- a/baohiemanvuisongkhoe.html
+++ b/baohiemanvuisongkhoe.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An vui sống khoẻ</title>
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
   <link rel="stylesheet" href="/style.css" />
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
