--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bảo hiểm cháy, nổ bắt buộc</title>
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
   <!-- Meta Description -->
   <meta name="description"
     content="Mua bảo hiểm cháy nổ bắt buộc, bảo hiểm tài sản, khách sạn, nhà cửa uy tín. Đăng ký dễ dàng - nhận tư vấn miễn phí - bảo vệ toàn diện khỏi rủi ro hỏa hoạn.">
