--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bảo hiểm ô tô, xe máy</title>
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
   <link rel="stylesheet" href="/style.css" />
 
   <!-- SEO Meta -->
