--- a/tuyen-dung.html
+++ b/tuyen-dung.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bảo Việt Đà Nẵng</title>
+  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
   <link rel="shortcut icon" href="https://baovietonline.com.vn/favicon.ico">
   <link rel="stylesheet" href="/style.css" />
 </head>
