feat: added news

--- a/baohiemchayno.html
+++ b/baohiemchayno.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bảo hiểm cháy, nổ bắt buộc</title>
-  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
   <!-- Meta Description -->
   <meta name="description"
     content="Mua bảo hiểm cháy nổ bắt buộc, bảo hiểm tài sản, khách sạn, nhà cửa uy tín. Đăng ký dễ dàng - nhận tư vấn miễn phí - bảo vệ toàn diện khỏi rủi ro hỏa hoạn.">
@@ -82,6 +82,7 @@
         </div>
       </li>
       <li onclick="window.location.href='/tuyen-dung.html'">Tuyển dụng</li>
+      <li onclick="window.location.href='/tin-tuc.html'">Tin tức</li>
     </ul>
     <div class="contact-wrapper">
       <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
