--- a/baohiemintercare.html
+++ b/baohiemintercare.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bảo hiểm Intercare </title>
-  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
   <link rel="stylesheet" href="/style.css" />
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -20,7 +20,7 @@
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://baohiembaovietdanang.vn/baohiemintercare.html" />
   <meta property="twitter:title" content="Bảo hiểm Intercare - Bảo Việt Đà Nẵng" />
-  <meta property="twitter:description"
+  <meta property="twitter:descripti`on"
     content="Giúp kết nối khách hàng với hệ thống y tế cao cấp trong và ngoài nước, có Intercare, an tâm sức khỏe." />
   <meta property="twitter:image"
     content="https://baovietonline.com.vn/uploads/product/9d21949d2e2c734e19b8574b2dea4f34.jpg" />
@@ -75,6 +75,7 @@
         </div>
       </li>
       <li onclick="window.location.href='/tuyen-dung.html'">Tuyển dụng</li>
+      <li onclick="window.location.href='/tin-tuc.html'">Tin tức</li>
     </ul>
     <div class="contact-wrapper">
       <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
