--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     content="Tìm hiểu các gói bảo hiểm nhân thọ và phi nhân thọ tại Bảo Việt Đà Nẵng. Đăng ký tư vấn miễn phí ngay hôm nay!">
   <meta name="twitter:image" content="assets/bao-60-nam-1-113944_87-121522.webp">
   <title>Bảo Việt Đà Nẵng</title>
-  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
   <link rel="shortcut icon" href="https://baohiembaovietdanang.vn/assets/logo.ico">
   <link rel="stylesheet" href="/style.css" />
 </head>
@@ -81,6 +81,7 @@
         </div>
       </li>
       <li onclick="window.location.href='/tuyen-dung.html'">Tuyển dụng</li>
+      <li onclick="window.location.href='/tin-tuc.html'">Tin tức</li>
     </ul>
     <div class="contact-wrapper">
       <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
