--- a/baohiemanphattrondoi.html
+++ b/baohiemanphattrondoi.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An Phát Trọn Đời</title>
-  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
   <!-- Meta Image for Social Sharing -->
   <meta property="og:image"
     content="https://www.baovietnhantho.com.vn/storage/9e2f4b35-ff14-40d7-a1e6-6777a8eb9914/an-tam-hoach-dinh.jpg">
@@ -67,6 +67,7 @@
         </div>
       </li>
       <li onclick="window.location.href='/tuyen-dung.html'">Tuyển dụng</li>
+      <li onclick="window.location.href='/tin-tuc.html'">Tin tức</li>
     </ul>
     <div class="contact-wrapper">
       <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
