--- a/baohiemoto.html
+++ b/baohiemoto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">d
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bảo hiểm oto, xe máy</title>
-    <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
     <meta name="description"
       content="So sánh & mua bảo hiểm ô tô bắt buộc, vật chất xe giá rẻ, từ các nhà cung cấp uy tín. Hỗ trợ nhanh, thanh toán online, giao giấy tờ tận nơi.">
     <meta name="keywords"
@@ -78,6 +78,7 @@
           </div>
         </li>
         <li onclick="window.location.href='/tuyen-dung.html'">Tuyển dụng</li>
+        <li onclick="window.location.href='/tin-tuc.html'">Tin tức</li>
       </ul>
       <div class="contact-wrapper">
         <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
