--- a/baohiemxemay.html
+++ b/baohiemxemay.html
@@ -17,7 +17,7 @@
   <meta name="twitter:image"
     content="https://baovietonline.com.vn/uploads/product/019310e7808afe2f3b13e982a08239e7.jpg">
   <title>Bảo hiểm xe máy</title>
-  <link rel="icon" type="image/png" href="./assets/logo.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -70,6 +70,7 @@
         </div>
       </li>
       <li onclick="window.location.href='/tuyen-dung.html'">Tuyển dụng</li>
+      <li onclick="window.location.href='/tin-tuc.html'">Tin tức</li>
     </ul>
     <div class="contact-wrapper">
       <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
