feat: update image năm

--- a/bao-hiem-bao-viet-danang-giai-phap-toan-dien.html
+++ b/bao-hiem-bao-viet-danang-giai-phap-toan-dien.html
@@ -109,7 +109,7 @@
       <p><span style="font-weight: 400;">Tại Đ&agrave; Nẵng - Th&agrave;nh phố biển thuộc khu vực Trung Trung Bộ - Bảo
           Hiểm Bảo Việt Đ&agrave; Nẵng l&agrave; một trong những đơn vị ti&ecirc;n phong cung cấp c&aacute;c sản phẩm
           bảo hiểm to&agrave;n diện, đ&aacute;p ứng mọi nhu cầu của gia đ&igrave;nh Việt.</span></p>
-      <img src="assets/tin-tuc/giai-phap-toan-dien/bảo việt đà nẵng.jpg" style="width: 100%; height: auto;"
+      <img src="assets/tin-tuc/giai-phap-toan-dien/baovietdanang1.jpg" style="width: 100%; height: auto;"
         alt="bao-viet-da-nang" />
       <p><em><span style="font-weight: 400;">Bảo Hiểm Bảo Việt Đ&agrave; Nẵng l&agrave; chi nh&aacute;nh ch&iacute;nh
             thức của tập đo&agrave;n Bảo Việt tại Đ&agrave; Nẵng.</span></em></p>
@@ -184,7 +184,7 @@
       <p><span style="font-weight: 400;">Tự động gia tăng 5% số tiền bảo hiểm mỗi năm, hưởng l&atilde;i suất đầu tư hấp
           dẫn v&agrave; thưởng gi&aacute; trị t&agrave;i khoản định kỳ, hỗ trợ linh hoạt trong đ&oacute;ng
           ph&iacute;.</span></p>
-      <img src="assets/tin-tuc/giai-phap-toan-dien/bảo việt đà nẵng (2).jpg" style="width: 100%; height: auto;"
+      <img src="assets/tin-tuc/giai-phap-toan-dien/baovietdanang2.jpg" style="width: 100%; height: auto;"
         alt="bao-viet-da-nang" />
       <p><em><span style="font-weight: 400;">Bảo hiểm Nh&acirc;n Thọ Bảo Việt bao gồm nhiều g&oacute;i bảo hiểm
             ph&ugrave; hợp cho từng nhu cầu v&agrave; mục đ&iacute;ch của kh&aacute;ch h&agrave;ng.</span></em></p>
@@ -260,14 +260,14 @@
       <p><span style="font-weight: 400;">Để được tư vấn kĩ hơn theo nhu cầu v&agrave; t&agrave;i ch&iacute;nh cụ thể,
           vui l&ograve;ng li&ecirc;n hệ đến số hotline: 0905.499.496/</span><a href="https://zalo.me/84931909697"><span
             style="font-weight: 400;">0931.909.697</span></a></p>
-      <img src="assets/tin-tuc/giai-phap-toan-dien/bảo việt đà nẵng (3).jpg" style="width: 100%; height: auto;"
+      <img src="assets/tin-tuc/giai-phap-toan-dien/baovietdanang3.jpg" style="width: 100%; height: auto;"
         alt="bao-viet-da-nang" />
       <p><em><span style="font-weight: 400;">Với đa dạng c&aacute;c sản phẩm bảo hiểm vật chất như bảo hiểm &ocirc;
             t&ocirc;, bảo hiểm ch&aacute;y nổ bắt buộc,.. bảo hiểm Phi Nh&acirc;n Thọ Bảo Việt được kh&aacute;ch
             h&agrave;ng đ&aacute;nh gi&aacute; cao bởi t&iacute;nh thực tế v&agrave; chi ph&iacute; hợp
             l&yacute;.</span></em></p>
       <br />
-      <img src="assets/tin-tuc/giai-phap-toan-dien/bảo việt đà nẵng (4).jpg" style="width: 100%; height: auto;"
+      <img src="assets/tin-tuc/giai-phap-toan-dien/baovietdanang4.jpg" style="width: 100%; height: auto;"
         alt="bao-viet-da-nang" />
       <p><em><span style="font-weight: 400;">Bảo Việt An Gia l&agrave; g&oacute;i một trong c&aacute;c g&oacute;i bảo
             hiểm nổi bật nhất v&agrave; được nhiều kh&aacute;ch h&agrave;ng lựa chọn nhất tại Bảo Hiểm Bảo Việt
@@ -310,7 +310,7 @@
         <li style="font-weight: 400;"><span style="font-weight: 400;">Ch&iacute;nh s&aacute;ch linh hoạt: Đ&oacute;ng
             ph&iacute; linh hoạt, c&oacute; thể mở rộng phạm vi bảo hiểm khi cần.</span></li>
       </ul>
-      <img src="assets/tin-tuc/giai-phap-toan-dien/bảo việt đà nẵng (6).jpg"
+      <img src="assets/tin-tuc/giai-phap-toan-dien/baovietdanang6.jpg"
         style="width: 100%; height: auto; margin-top: 10px;" alt="bao-viet-da-nang" />
       <p><em><span style="font-weight: 400;">Bảo Việt Đ&agrave; Nẵng cam kết mang lại chất lượng dịch vụ tốt nhất cho
             c&aacute;c qu&yacute; kh&aacute;ch h&agrave;ng.</span></em></p>
