--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -101,7 +101,7 @@
         <div class="news-item"
           style="border: 1px solid gray; padding: 10px; border-radius: 10px; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
           <img style="width: 100%; height: 400px; object-fit: cover;"
-            src="assets/tin-tuc/giai-phap-toan-dien/bảo việt đà nẵng (5).jpg" alt="Tin tức 1" />
+            src="assets/tin-tuc/giai-phap-toan-dien/baovietdanang5.jpg" alt="Tin tức 1" />
           <h3>Bảo Việt Đà Nẵng: Giải pháp bảo hiểm toàn diện cho mọi nhà</h3>
           <p>Bảo Hiểm Bảo Việt Đà Nẵng là một trong những đơn vị tiên phong cung cấp các sản phẩm bảo hiểm toàn diện,
             đáp ứng mọi nhu cầu của gia đình Việt...</p>
