--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -97,7 +97,7 @@
     </div>
 
     <div style="max-width: 900px; margin: auto; margin-top: 20px;">
-      <div class="news-list">
+      <div class="news-list" style="display: flex; flex-direction: column; gap: 10px;">
         <div class="news-item"
           style="border: 1px solid gray; padding: 10px; border-radius: 10px; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
           <img style="width: 100%; height: 400px; object-fit: cover;"
@@ -106,6 +106,15 @@
           <p>Bảo Hiểm Bảo Việt Đà Nẵng là một trong những đơn vị tiên phong cung cấp các sản phẩm bảo hiểm toàn diện,
             đáp ứng mọi nhu cầu của gia đình Việt...</p>
           <a href="./bao-hiem-bao-viet-danang-giai-phap-toan-dien.html">Xem chi tiết →</a>
+        </div>
+        <div class="news-item"
+          style="border: 1px solid gray; padding: 10px; border-radius: 10px; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
+          <img style="width: 100%; height: 400px; object-fit: cover;"
+            src="assets/tin-tuc/co-nen-mua-bang-gia-2025/image4.jpg" alt="Tin tức 2" />
+          <h3>Bảo Việt Đà Nẵng: Giải pháp bảo hiểm toàn diện cho mọi nhà</h3>
+          <p>Bảo hiểm sức khỏe Bảo Việt có tốt không? Cập nhật quyền lợi, bảng giá và đánh giá ưu nhược điểm mới nhất
+            năm 2025...</p>
+          <a href="./bao-hiem-suc-khoe-bao-viet-co-nen-mua-bang-gia-2025.html">Xem chi tiết →</a>
         </div>
         <!-- Thêm các mục tin tức tương tự -->
       </div>
