--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -97,7 +97,7 @@
     </div>
 
     <div style="max-width: 900px; margin: auto; margin-top: 20px;">
-      <div class="news-list" style="display: flex; flex-direction: column; gap: 10px;">
+      <div class="news-list" style="display: flex; flex-direction: column; gap: 20px;">
         <div class="news-item"
           style="border: 1px solid gray; padding: 10px; border-radius: 10px; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
           <img style="width: 100%; height: 400px; object-fit: cover;"
@@ -111,10 +111,19 @@
           style="border: 1px solid gray; padding: 10px; border-radius: 10px; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
           <img style="width: 100%; height: 400px; object-fit: cover;"
             src="assets/tin-tuc/co-nen-mua-bang-gia-2025/image4.jpg" alt="Tin tức 2" />
-          <h3>Bảo Việt Đà Nẵng: Giải pháp bảo hiểm toàn diện cho mọi nhà</h3>
+          <h3>Có nên mua Bảo hiểm sức khỏe Bảo Việt? Chi tiết quyền lợi & bảng giá 2025</h3>
           <p>Bảo hiểm sức khỏe Bảo Việt có tốt không? Cập nhật quyền lợi, bảng giá và đánh giá ưu nhược điểm mới nhất
             năm 2025...</p>
           <a href="./bao-hiem-suc-khoe-bao-viet-co-nen-mua-bang-gia-2025.html">Xem chi tiết →</a>
+        </div>
+        <div class="news-item"
+          style="border: 1px solid gray; padding: 10px; border-radius: 10px; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
+          <img style="width: 100%; height: 400px; object-fit: cover;" src="assets/tin-tuc/an-tam-hoach-dinh/image3.jpg"
+            alt="Tin tức 2" />
+          <h3>Bảo hiểm An Tâm Hoạch Định: Đồng hành cùng tương lai con bạn</h3>
+          <p>An Tâm Hoạch Định của Bảo hiểm Bảo Việt giúp bảo vệ cha mẹ, tích lũy học vấn và đảm bảo tương lai con vững
+            vàng...</p>
+          <a href="./bao-hiem-an-tam-hoach-dinh.html">Xem chi tiết →</a>
         </div>
         <!-- Thêm các mục tin tức tương tự -->
       </div>
