--- a/baohiemsuckhoe.html
+++ b/baohiemsuckhoe.html
@@ -738,7 +738,7 @@
               <td colspan="5">0,09% STBH</td>
             </tr>
             <tr>
-              <td>Bảo hiểm Nhân thọ</td>
+              <td>Bảo hiểm sinh mạng cá nhân</td>
               <td colspan="5">0,2% STBH</td>
             </tr>
             <tr>
