fix: implemented 'nghi dinh chinh phu ve chay no' topic

--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -125,6 +125,16 @@
             vàng...</p>
           <a href="./bao-hiem-an-tam-hoach-dinh.html">Xem chi tiết →</a>
         </div>
+        <div class="news-item"
+          style="border: 1px solid gray; padding: 10px; border-radius: 10px; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
+          <img style="width: 100%; height: 400px; object-fit: cover;"
+            src="assets/tin-tuc/bao-hiem-chay-no/images/image6.jpg"
+            alt="Nghị định chính phủ về bảo hiểm cháy nổ 2025" />
+          <h3>Nghị định Chính phủ: 44 cơ sở bắt buộc mua bảo hiểm cháy nổ từ 1/7/2025</h3>
+          <p>Tìm hiểu chi tiết danh mục 44 loại hình cơ sở phải mua bảo hiểm cháy nổ theo Nghị định 105/2025/NĐ-CP,
+            quyền lợi và hướng dẫn mua bảo hiểm uy tín tại Đà Nẵng.</p>
+          <a href="./nghi-dinh-chinh-phu-chay-no.html">Xem chi tiết →</a>
+        </div>
         <!-- Thêm các mục tin tức tương tự -->
       </div>
     </div>
